# tinytuya_wizard

./: README.md  pyproject.toml
tinytuya-wizard/: __init__.py  __main__.py  wizard.py
tinytuya_wizard/: __init__.py  __main__.py  wizard.py
