[project]
name = "tinytuya_wizard"
version = "0.1.2"
description = "Interactive wizard for tinytuya library"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{name = "3735943886"}]
dependencies = [
  "tinytuya",
  "qrcode",
  "tuya-device-sharing-sdk"
]

[project.urls]
Homepage = "https://github.com/3735943886/tinytuya_wizard"

[project.scripts]
tinytuya_wizard = "tinytuya_wizard.__main__:main"
